--- a/css/styles.css
+++ b/css/styles.css
@@ -1,217 +1,62 @@
 /* ----- Global Styles ------ */
 
+
+/* Elements */
+header {
+  color:#1F2A33
+}
+
+body { 
+  margin:0px /* Required for nav bar to fill the top part of the page*/
+}
+
 /* Colour Themes */
 
 .accent-theme {
-    background-color: #c68642;
+  background-color: #2A6F97;
 }
 
 .background-theme {
-    background-color:#2d6a6a;
+  background-color:#A7C7E7;
 }
 
 /* Elements */
 
-footer {
-  color: white;
-}
-
-p{
-  color:white;
-  font-size:larger
-}
-
-h2{
-  font-family: Georgia, 'Times New Roman', Times, serif; 
-  font-size: xx-large; 
-  color: white;
-  text-align: center;
-}
-
-h3{
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size:x-large;
-  color:white
-}
-
-img { 
-  border-radius: 10px;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.848);
-  margin: 0.2rem auto; 
-}
-
-li {
-    text-align: left;
-    font-size: large;
-    margin-top: 1.5rem;
-    margin-bottom: 1.5rem;
-    color: white;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-  background-color: #ffffff22; 
-  color: white;
-  font-family: Georgia, serif;
-}
-
-th, td {
-  border: 1px solid #ffffff3e;
-  padding: 1rem;
-  text-align: left;
-}
-
-th {
-  background-color: #c38038; 
-  color: white;
-}
 
 /* Classes */
-
-.subtitle {
-  font-size: x-large;
-  text-align: center;
-  color: white;
+.main-header {
+  margin-right: 30vw
 }
 
-/* Banner */
-
-.banner {
-    background-image: url(../images/banner.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 250px;
-    position: relative;
-    color: #ffffff;
-    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7); /* Border for banner text, makes text more readable against background */
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-}
-
-.banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    font-size: xx-large;
-    transform: translate(-50%, -50%);
-}
-
-/* Validation Colours */
-
-.invalid {
-  color:red
-}
-
-.valid {
-  color:#7ad59b /* Minty green tone used to contrast better with the background colour than the generic green does */ 
-}
-
-/* Misc */
-
-.media-caption {
-  font-size: small;
-  color:white;
-  text-align: center;
-}
-
-/* ----- Section Styles ----- */
-
-/* Index */
-
-.main-content {
-    display: flex; /* Lays out the content in a row */
-    justify-content: space-between;
-    gap: 1rem;
-    padding: 1rem;
-}
-
-.media-section {
-    text-align: center; 
-    border:#000000;
-    border-radius: 6px;
-    border-style: solid;
-    background-color: #3a7c7c;
-    flex: 0.7 ;
-}
-
-.text-section {
-    flex: 1; 
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: larger;
-    color: white;
-    
-}
-
-/* Registration */
-
-.registration {
-  text-align: center;
-  text-justify: left;
-  font-size: x-large;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  color: #ffffff;  
-}
-
-.registration form {
-  margin-top: 1rem;
-}
-/* Gallery */
-
-.gallery-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;  
-  gap: 1rem;                        
-}
-
-.gallery-grid figure {
-  width: 48%;                       
-  margin: 0;
-}
-
-.photo-gallery figcaption {
- color: #ffffff;
- font-size: large;
-}
-
-.photo-gallery img {
-  width:100%;
-  height:80%;
-  display: block;
-}
-
-/* Help */
-
-.help-right {
-  flex: 1;
-}
-
-.help-left {
-  flex: 1;
-}
-
-.help-left h1, h2, h3 {
-  text-align: center;
+.header-text {
+  font-size:1.82vw; /* Approximately 35PX on 1920-1080 resolution, adapts for smaller resolutions*/
+  justify-content: left;
 }
 
 /* Navigation */
+nav {
+  display: flex;
+  height: 10vh;
+  flex-grow:3;
+}
 
 nav a {
+
   text-decoration: none;
-  color: white; 
+  color: #1F2A33; 
   font-weight: bold;
+  white-space: nowrap; /* Prevent text from overflowing outside of nav bar*/
 }
 
 nav li {
-  margin: 0 1rem; 
+  margin: 1vw;
+ 
 }
 
-nav ul { /* Only changes elements within <nav> */
-    display: flex;
-    list-style-type: none; 
-    margin: 0;
-    padding: 0;
-    justify-content: center; 
+nav ul { 
+  display: flex;
+  list-style-type: none; 
+  margin: 0;
+  padding: 0;
+  font-size: clamp(1rem, 1.82vw, 3rem);
 }
