--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,20 @@ footer p {
   text-decoration: none; /* remove underline */
   border-radius: 20px;
   font-weight: bold;
-  font-size:38px;
+  font-size:clamp(1.2rem, 1.88vw, 36px);
+}
+
+nav .btn {
+  padding: 0.5vw 0.5vw;
+  font-size:clamp(0.8rem, 1.88vw, 36px);
 }
 
 .btn:hover {
   background-color: #2d7daf;
+}
+
+.button-container {
+  text-align:center;
 }
 
 /* ----- Classes ----- */
@@ -116,17 +125,16 @@ margin:2vw;
 text-align:center
 }
 
-.button-container {
-  text-align:center;
-}
+
 
 /* Navigation bar */
 
 .sp-nav-header {
   margin-right: 2rem;
   flex:1;
-  font-size: clamp(2vw, 2.5vw, 58px);
+  font-size: clamp(0.9rem, 2.5vw, 58px);
   margin: 0.5vw;
+  align-content:center
 }
 
 nav {
@@ -206,14 +214,21 @@ nav ul {
 }
 
 .contact-page iframe {
-  width:90%; 
+  width:100%;
+   
+}
+
+.contact-details {
+  width: 50%;
 }
 
 .contact-form {
   text-align:center;
+  width:50%;
+  padding:2vw;
   margin: 1vw;
   background-color:#ffffff;
-  border: 0.2vw solid #000000;
+  border: 0.1vw solid #00000081;
 }
 
 
@@ -232,6 +247,7 @@ nav ul {
   overflow-y: auto;      
   border: 1px solid #000000;
   margin: 2vw 20vw;
+  background-color:#ffffff
 }
 
 /* Gallery */
@@ -250,6 +266,28 @@ nav ul {
   border-radius: 10px;
   cursor: pointer; /* Makes cursor 'pointed' as visual indicator*/
   object-fit:cover;
+}
+
+/* Booking */
+
+.booking-form {
+  margin:1vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.booking-form td, th {
+  border-bottom: none;
+}
+
+.booking-form .btn {
+  text-align: center;
+}
+
+.additional-box {
+  width:auto;
 }
 
 /* Dark blur background */
@@ -320,6 +358,10 @@ td, th {
     width: 100%;
     text-align: center;
     padding: 0.75rem 0;
+  }
+
+  .contact-details, .contact-form {
+    width: 90%;
   }
 
 }
