Updated titles and added meta description tags

--- a/public-html/css/styles.css
+++ b/public-html/css/styles.css
@@ -14,12 +14,11 @@ html, body {
   width:200px;
 }
 
-
 .gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-    gap: 1.5rem;
-    margin: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  gap: 1.5rem;
+  margin: 2rem;
 }
 
 .gallery-thumbnail {
@@ -42,17 +41,16 @@ html, body {
 }
 
 .lightbox img {
-    max-width: 90%;
-    max-height: 90%;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .lightbox:target {
-    display: flex;
+  display: flex;
 }
 
 .booking-form {
-
-    table-layout: fixed;
+  table-layout: fixed;
   max-width:600px;
   margin:auto;
 }
@@ -86,6 +84,11 @@ html, body {
   flex-wrap:wrap; justify-content: space-between;
 }
 
+.services-overview {
+  margin-left:1rem;
+  margin-right:1rem;
+}
+
 @media (max-width: 768px) {
   .gallery-grid {
       grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -112,5 +115,10 @@ html, body {
 
   .booking-form {
     width:100%;
+  }
+  
+  .services-overview { /* Prevents layout from breaking on smaller devices*/
+    margin-left:0rem;
+    margin-right:0rem;
   }
 }
